// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as expected 1`] = `
<Touchable
  borderlessRipple={false}
  disabled={false}
  onPress={[Function]}
  rippleColor="rgba(0, 0, 0, .32)"
  style={
    Array [
      Object {
        "backgroundColor": "rgba(0, 151, 169, 0.13)",
        "height": 44,
        "paddingHorizontal": 10,
        "paddingVertical": 14,
      },
      Object {
        "borderBottomLeftRadius": 3,
        "borderTopLeftRadius": 3,
      },
      Object {
        "borderBottomRightRadius": 3,
        "borderTopRightRadius": 3,
      },
    ]
  }
>
  <Component
    style={
      Object {
        "flexDirection": "row",
        "flexGrow": 1,
      }
    }
  >
    <ButtonTitle
      style={
        Object {
          "color": "#00a991",
          "fontSize": 14,
        }
      }
      text={
        <Translation
          id="single_hotel.room_picker.select"
        />
      }
    />
    <Component
      style={
        Object {
          "flexDirection": "row",
          "flexGrow": 1,
        }
      }
    />
    <Price
      amount={100}
      currency="CZK"
      style={
        Object {
          "color": "#00a991",
          "fontSize": 14,
        }
      }
    />
  </Component>
</Touchable>
`;

exports[`renders as expected 2`] = `
<Component
  style={
    Object {
      "flexDirection": "row",
      "flexGrow": 1,
    }
  }
>
  <MinusButton
    onPress={[Function]}
  />
  <Component
    style={
      Array [
        Object {
          "backgroundColor": "rgba(0, 151, 169, 0.13)",
          "height": 44,
          "paddingHorizontal": 10,
          "paddingVertical": 14,
        },
        Object {
          "flexDirection": "row",
          "flexGrow": 1,
        },
        Object {
          "justifyContent": "center",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#00a991",
            "fontSize": 14,
          },
          Object {
            "fontWeight": "bold",
          },
        ]
      }
    >
      <Translation
        passThrough="1 × "
      />
    </Text>
    <Price
      amount={100}
      currency="CZK"
      style={
        Object {
          "color": "#00a991",
          "fontSize": 14,
        }
      }
    />
  </Component>
  <PlusButton
    disabled={false}
    onPress={[Function]}
  />
</Component>
`;

exports[`renders as expected 3`] = `
<Component
  style={
    Object {
      "flexDirection": "row",
      "flexGrow": 1,
    }
  }
>
  <MinusButton
    onPress={[Function]}
  />
  <Component
    style={
      Array [
        Object {
          "backgroundColor": "rgba(0, 151, 169, 0.13)",
          "height": 44,
          "paddingHorizontal": 10,
          "paddingVertical": 14,
        },
        Object {
          "flexDirection": "row",
          "flexGrow": 1,
        },
        Object {
          "justifyContent": "center",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#00a991",
            "fontSize": 14,
          },
          Object {
            "fontWeight": "bold",
          },
        ]
      }
    >
      <Translation
        passThrough="2 × "
      />
    </Text>
    <Price
      amount={100}
      currency="CZK"
      style={
        Object {
          "color": "#00a991",
          "fontSize": 14,
        }
      }
    />
  </Component>
  <PlusButton
    disabled={true}
    onPress={[Function]}
  />
</Component>
`;
